syntax = "proto3";
package common;

option go_package = "github.com/zeta-chain/zetacore/common";
//option (gogoproto.goproto_stringer_all) = false;
//option (gogoproto.stringer_all)         = false;
//option (gogoproto.goproto_getters_all)  = false;

import "gogoproto/gogo.proto";


// PubKeySet contains two pub keys , secp256k1 and ed25519
message PubKeySet {
  string secp256k1 = 1 [(gogoproto.casttype) = "PubKey", (gogoproto.customname) = "Secp256k1"];
  string ed25519   = 2 [(gogoproto.casttype) = "PubKey"];
}

enum ReceiveStatus {
  option (gogoproto.goproto_enum_stringer) = true;
  Created = 0; // some observer sees inbound tx
  Success = 1;
  Failed = 2;
}

enum CoinType {
  option (gogoproto.goproto_enum_stringer) = true;
  Zeta = 0;
  Gas = 1; // Ether, BNB, Matic, Klay, BTC, etc
  ERC20 = 2; // ERC20 token
}


enum ChainName {
  option (gogoproto.goproto_enum_stringer) = true;
  Empty = 0;
  Eth = 1;
  ZetaChain = 2;
  Btc = 3;
  Polygon = 4;
  BscMainnet = 5 ;
  Goerli = 6;
  Mumbai = 7;
  Ropsten = 8;
  Ganache = 9;
  Baobab = 10;
  BscTestnet = 11 ;
  ZetaChainTestNet = 12;
  BtcTestNet = 13 ;
}

message Chain {
  ChainName ChainName = 1;
  int64 ChainId = 2;
}


