syntax = "proto3";
package zetachain.zetacore.crosschain;
import "gogoproto/gogo.proto";
import "common/common.proto";
option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message EventInboundFinalized {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string tx_orgin = 4;
  string asset = 5;
  string in_tx_hash = 6;
  string in_block_height = 7;
  string receiver = 8;
  string receiver_chain = 9;
  string amount = 10;
  string relayed_message = 11;
  string new_status = 12;
  string status_message = 13;
  string sender_chain = 14;
}


message EventKeygenBlockUpdated {
  string msg_type_url = 1;
  string keygen_block = 2;
  string keygen_pubkeys = 3;
}


message EventZrcWithdrawCreated {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string sender_chain = 4;
  string in_tx_hash = 5;
  string receiver = 6;
  string receiver_chain = 7;
  string amount = 8;
  string new_status = 9;
}

message EventBallotCreated {
  string msg_type_url = 1;
  string cctx_index = 2;
  string ballot_identifier = 3;
  string observation_hash = 4;
  string observation_chain = 5;
  string ballot_type = 6;
}


message EventZetaWithdrawCreated {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string in_tx_hash = 4;
  string new_status = 5;
}


message EmitOutboundFailure {
  string msg_type_url = 1;
  string cctx_index = 2;
  string old_status = 3;
  string new_status = 4;
  string zeta_minted = 5;
}

message EmitOutboundSuccess {
  string msg_type_url = 1;
  string cctx_index = 2;
  string old_status = 3;
  string new_status = 4;
  string zeta_minted = 5;
}

